--- a/ByteBankSample/ByteBankSample/ByteBankSample.csproj
+++ b/ByteBankSample/ByteBankSample/ByteBankSample.csproj
@@ -7,15 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="tools\**" />
+    <EmbeddedResource Remove="tools\**" />
+    <None Remove="tools\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.11.10" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ByteBank.Models\ByteBank.Models.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="tools\" />
   </ItemGroup>
 
 </Project>
