--- a/ByteBankSample/ByteBankSample/ByteBankSample.csproj
+++ b/ByteBankSample/ByteBankSample/ByteBankSample.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>_5_ByteBankSample</RootNamespace>
+    <RootNamespace>ByteBankSample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.11.10" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
   </ItemGroup>
 
   <ItemGroup>
