--- a/ByteBankSample/ByteBank.Models/ByteBankLib.csproj
+++ b/ByteBankSample/ByteBank.Models/ByteBankLib.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\Bernardo\Repositórios\Study - C#\ByteBankSample\ByteBank.Models\ByteBank.Models.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
 </Project>
