Criação da camada de controller 1

--- a/ByteBankSample/ByteBankWebMVC/ByteBankWebMVC.csproj
+++ b/ByteBankSample/ByteBankWebMVC/ByteBankWebMVC.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\ByteBank.Models\ByteBankLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Register\" />
+  </ItemGroup>
+
 </Project>
