--- a/CasaDoCodigo/CasaDoCodigo/CasaDoCodigo.csproj
+++ b/CasaDoCodigo/CasaDoCodigo/CasaDoCodigo.csproj
@@ -5,9 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210918040053_inicial.cs" />
+    <Compile Remove="Migrations\20210918040053_inicial.Designer.cs" />
+    <Compile Remove="Migrations\20210918042248_Modelo.cs" />
+    <Compile Remove="Migrations\20210918042248_Modelo.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.18.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
